include_directories(${TechnicCraft_SOURCE_DIR}/Game/include)
include_directories(${TechnicCraft_SOURCE_DIR}/T3D/include)
link_directories(${TechnicCraft_SOURCE_DIR}/T3D/src)
add_executable(Game main.cpp)
set_target_properties(Game PROPERTIES OUTPUT_NAME "TechnicCraft")
target_link_libraries(Game T3D)